# trading-performance-dashboard

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
app/: dashboard_app.py
data/: equity_curve.csv  kpis_summary.csv  trades_fact.csv
etl/: etl_from_excel.py
sql/: kpis.sql
