# Trading Dashboard ETL — project config
# Lint & format:  ruff check .   and   ruff format .

[project]
name = "trading-dashboard-etl"
version = "0.1.0"
description = "ETL pipeline for Trading Performance Dashboard"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0,<3",
    "numpy>=1.24.0,<3",
    "openpyxl>=3.1.0,<4",
    "streamlit>=1.30.0,<2",
    "altair>=5.0.0,<6",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (let formatter handle)
]

[tool.ruff.format]
quote-style = "double"

# Pyright / Pylance: resolve third-party imports from the project venv
[tool.pyright]
venvPath = "."
venv = ".venv"
